syntax = "proto3";

package sirsi.contracts.v1;

option go_package = "github.com/sirsimaster/contracts-grpc/gen/go/contracts/v1";

// ============================================
// CONTRACTS SERVICE
// Full gRPC service for contract management
// ============================================

service ContractsService {
  // Contract CRUD
  rpc CreateContract(CreateContractRequest) returns (Contract);
  rpc GetContract(GetContractRequest) returns (Contract);
  rpc ListContracts(ListContractsRequest) returns (ListContractsResponse);
  rpc UpdateContract(UpdateContractRequest) returns (Contract);
  rpc DeleteContract(DeleteContractRequest) returns (DeleteContractResponse);
  
  // Template Generation
  rpc GeneratePage(GeneratePageRequest) returns (GeneratePageResponse);
  
  // Payment Integration
  rpc CreateCheckoutSession(CreateCheckoutRequest) returns (CheckoutSession);
  
  // Bank Transfer (Plaid) Integration
  rpc CreatePlaidLinkToken(CreatePlaidLinkTokenRequest) returns (PlaidLinkToken);
  rpc ExchangePlaidToken(ExchangePlaidTokenRequest) returns (ExchangePlaidTokenResponse);
  
  // Bidirectional Streaming (future: chat, real-time events)
  rpc StreamEvents(stream EventRequest) returns (stream EventResponse);
}

// ============================================
// BANK TRANSFER (PLAID) MESSAGES
// ============================================

message CreatePlaidLinkTokenRequest {
  string user_id = 1;
  string client_name = 2;
}

message PlaidLinkToken {
  string link_token = 1;
}

message ExchangePlaidTokenRequest {
  string public_token = 1;
  string contract_id = 2;
  string account_id = 3; // Selected Plaid account ID
}

message ExchangePlaidTokenResponse {
  bool success = 1;
  string stripe_bank_account_token = 2; // btok_...
  string message = 3;
}


// ============================================
// CORE MESSAGES
// ============================================

message Contract {
  string id = 1;
  string project_id = 2;
  string client_name = 3;
  string client_email = 4;
  string project_name = 5;
  
  // Pricing
  int64 total_amount = 6;  // cents
  repeated PaymentPlan payment_plans = 7;
  
  // Theming
  Theme theme = 8;
  
  // Status
  ContractStatus status = 9;
  
  // Timestamps
  int64 created_at = 10;
  int64 updated_at = 11;
  string created_by = 12;

  // Headers & Verification
  string countersigner_name = 13;
  string countersigner_email = 14;
  int64 countersigned_at = 15;

  // Stripe Architecture
  string stripe_connect_account_id = 20;

  // Execution Data (OpenSign)
  string signature_image_data = 16;
  string signature_hash = 21; // Cryptographic SHA-256 evidence
  bool legal_acknowledgment = 17;

  // Selection Data
  int32 selected_payment_plan = 18;
  string payment_method = 19;

  // Ledger
  int64 paid_amount = 22;  // cents â€” total paid against this contract
}


message PaymentPlan {
  string id = 1;
  string name = 2;
  string description = 3;
  int32 payment_count = 4;
  int64 monthly_amount = 5;   // cents
  int64 total_amount = 6;     // cents
}

message Theme {
  string primary_color = 1;    // Default: #C8A951 (gold)
  string secondary_color = 2;  // Default: #0f172a (navy)
  string accent_color = 3;     // Default: #10B981 (emerald)
  string font_heading = 4;     // Default: Cinzel
  string font_body = 5;        // Default: Inter
}

enum ContractStatus {
  CONTRACT_STATUS_UNSPECIFIED = 0;
  CONTRACT_STATUS_DRAFT = 1;
  CONTRACT_STATUS_ACTIVE = 2;
  CONTRACT_STATUS_SIGNED = 3;
  CONTRACT_STATUS_PAID = 4;
  CONTRACT_STATUS_ARCHIVED = 5;
  CONTRACT_STATUS_WAITING_FOR_COUNTERSIGN = 6;
}

// ============================================
// REQUEST/RESPONSE MESSAGES
// ============================================

message CreateContractRequest {
  string project_id = 1;
  string client_name = 2;
  string client_email = 3;
  string project_name = 4;
  int64 total_amount = 5;
  repeated PaymentPlan payment_plans = 6;
  Theme theme = 7;
  string countersigner_name = 8;
  string countersigner_email = 9;
  string stripe_connect_account_id = 10;
}



message GetContractRequest {
  string id = 1;
}

message ListContractsRequest {
  string project_id = 1;
  int32 page_size = 2;
  string page_token = 3;
  string user_email = 4;
}

message ListContractsResponse {
  repeated Contract contracts = 1;
  string next_page_token = 2;
  int32 total_count = 3;
}

message UpdateContractRequest {
  string id = 1;
  Contract contract = 2;
  // Field mask for partial updates
  repeated string update_mask = 3;
}

message DeleteContractRequest {
  string id = 1;
}

message DeleteContractResponse {
  bool success = 1;
}

// Template Generation
message GeneratePageRequest {
  string contract_id = 1;
  // Optional overrides
  Theme theme_override = 2;
}

message GeneratePageResponse {
  string html = 1;
  string preview_url = 2;
}

// Payment
message CreateCheckoutRequest {
  string contract_id = 1;
  string plan_id = 2;
  string success_url = 3;
  string cancel_url = 4;
  string stripe_connect_account_id = 5; // Optional: for platform routing
  repeated string payment_method_types = 6; // e.g., ["card", "us_bank_account", "customer_balance"]
}


message CheckoutSession {
  string session_id = 1;
  string checkout_url = 2;
}

// Streaming Events
message EventRequest {
  string subscription_id = 1;
  repeated string event_types = 2;  // e.g., "contract.updated", "payment.completed"
}

message EventResponse {
  string event_id = 1;
  string event_type = 2;
  string payload = 3;  // JSON payload
  int64 timestamp = 4;
}
